# openapi_server/models/__init__.py
@@ -11,4 +11,5 @@ from openapi_server.models.invitation_information_body_message_attributes_inner 
 from openapi_server.models.user_address_body import UserAddressBody
 from openapi_server.models.user_body import UserBody
 from openapi_server.models.user_child_body import UserChildBody
+from openapi_server.models.user_child_patch_body import UserChildPatchBody
 from openapi_server.models.user_subscription_body import UserSubscriptionBody
